plugins/kotlin/idea/tests/testData/highlighter/TooManyArguments.kt
// IGNORE_FIR
fun <info descr="null">fooxxx</info>() {}

fun <info descr="null">main</info>() {
    <info descr="null">fooxxx</info>(<error descr="[TOO_MANY_ARGUMENTS] Too many arguments for public fun fooxxx(): Unit defined in root package in file TooManyArguments.kt" textAttributesKey="ERRORS_ATTRIBUTES">"asdasd"</error>)
}